Adding file to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /ESO_Launcher_Closer_Updated/bin
 /ESO_Launcher_Closer_Updated/ESO_Launcher_Closer_Updated.csproj
 /ESO_Launcher_Closer_Updated/ESO_Launcher_Closer_Updated/ESO Launcher Closer_32512.ico
+/ESO_Launcher_Closer_Updated/ESO Launcher Closer_32512.ico
